# f1-predictor

./: .gitignore  Makefile  README.md  app.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: keepalive.yml
.streamlit/: config.toml
configs/: project.yaml
data/: f1_platform.db-shm  f1_platform.db-wal
outputs/: last_training_run.json
pages/: 1_Prediction.py  2_Season.py  3_Drivers.py  4_Constructors.py  5_My_Predictions.py  6_Historical.py  7_Admin.py
scripts/: check_env.py  ingest_historical.py  post_race_update.py  run_weekly.py
src/: app.py
src/f1_predictor/: __init__.py  config.py
src/f1_predictor/common/: auth.py  calendar.py  config.py  database.py  exceptions.py  logger.py
src/f1_predictor/features/: feature_builder.py  pandas_processor.py  spark_processor.py
src/f1_predictor/ingestion/: fastf1_client.py  openf1_client.py
src/f1_predictor/models/: baseline_model.py  inference.py  train.py
src/f1_predictor/prediction/: engine.py  scorer.py  store.py
src/f1_predictor/reporting/: linkedin_reporter.py  writer.py
tests/: test_baseline_model.py
