[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-predictor"
version = "0.1.0"
description = "Local-first F1 prediction pipeline with PySpark"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Pradeep" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]